RESOLVED FIXED303143
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-logical/logical-values-float-clear-reftest.html
https://bugs.webkit.org/show_bug.cgi?id=303143
Summary [blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-logical/logica...
alan
Reported 2025-11-26 08:16:19 PST
ssia
Attachments
[fast-cq]Patch (12.51 KB, patch)
2025-11-26 08:26 PST, alan
no flags
alan
Comment 1 2025-11-26 08:26:51 PST
Created attachment 477525 [details] [fast-cq]Patch
EWS
Comment 2 2025-11-26 10:57:46 PST
Committed 303575@main (57f146b3169c): <https://commits.webkit.org/303575@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477525 [details].
Radar WebKit Bug Importer
Comment 3 2025-11-26 10:58:12 PST
Note You need to log in before you can comment on or make changes to this bug.