[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-logical/logical-values-float-clear-reftest.html https://bugs.webkit.org/show_bug.cgi?id=303143

Reviewed by Antti Koivisto.

FloatingObject's setFrameRect expects visual coordinates (FloatItem's boxGeometry is logical).

* LayoutTests/fast/inline/blocks-in-inline-float-clear-rtl-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-float-clear-rtl.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::populateRootRendererWithFloatsFromIFC):
* Source/WebCore/layout/integration/LayoutIntegrationUtils.cpp:
(WebCore::Layout::IntegrationUtils::toMarginAndBorderBoxVisualRect):
* Source/WebCore/layout/integration/LayoutIntegrationUtils.h:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateRenderTreePositions):
(WebCore::LayoutIntegration::toMarginAndBorderBoxVisualRect): Deleted.

Canonical link: https://commits.webkit.org/303575@main