Source/WebCore/layout/integration/LayoutIntegrationUtils.h
@@ -53,6 +53,7 @@ public:
 
     static BlockLayoutState::MarginState toMarginState(const RenderBlockFlow::MarginInfo&);
     static RenderBlockFlow::MarginInfo toMarginInfo(const Layout::BlockLayoutState::MarginState&);
+    static std::pair<LayoutRect, LayoutRect> toMarginAndBorderBoxVisualRect(const BoxGeometry& logicalGeometry, const LayoutSize& containerSize, WritingMode);
 
 private:
     const CheckedRef<const LayoutState> m_globalLayoutState;
